--- a/templates/panel.html
+++ b/templates/panel.html
@@ -1,38 +1,32 @@
 
 <div class="panel panel-default" ng-repeat="axis in axes">
-  <div class="panel-heading">
-    <strong>{{axis.label}}</strong>
+  <div class="panel-heading" ng-if="axis.label == 'Tiles'">
+    <strong>Anzeige nach:</strong>
 
     <div class="btn-group" dropdown ng-show="axis.available.length">
-      &mdash;
-      <a dropdown-toggle class="ng-link">{{axis.addLabel}}</a>
+      &nbsp;&nbsp;
+      <a dropdown-toggle class="ng-link">&#x21d3;</a>
       <ul class="dropdown-menu" role="menu">
         <li ng-repeat="opt in axis.available">
-          <a ng-click="add(axis, opt.ref)">
-            <strong>{{opt.label}}</strong>
-            {{opt.subLabel}}
+          <a ng-click="add(axis, opt.ref)" ng-if="['Einzelplanbezeichnung', 'Hauptgruppenbezeichnung', 'Hauptfunktionbezeichnung'].indexOf(opt.subLabel) > -1">
+            <strong ng-if="opt.subLabel == 'Einzelplanbezeichnung'">Organisation</strong>
+            <strong ng-if="opt.subLabel == 'Hauptgruppenbezeichnung'">Gruppe</strong>
+            <strong ng-if="opt.subLabel == 'Hauptfunktionbezeichnung'">Funktion</strong>
           </a>
         </li>
       </ul>
     </div>
   </div>
-  <table class="table">
+  <table class="table" ng-if="axis.label == 'Tiles'">
     <tr ng-repeat="opt in axis.active">
       <td colspan="2">
-        <div class="pull-right">
-          <span ng-switch="getSort(opt.ref).direction">
-            <a ng-switch-when="desc" ng-click="pushSort(opt.ref, 'asc')" class="ng-link ng-icon">
-              <i class="fa fa-sort-amount-desc"></i></a>
-            <a ng-switch-when="asc" ng-click="pushSort(opt.ref, 'desc')" class="ng-link ng-icon">
-              <i class="fa fa-sort-amount-asc"></i></a>
-            <a ng-switch-default ng-click="pushSort(opt.ref, 'desc')" class="ng-link ng-icon">
-              <i class="fa fa-sort-amount-desc"></i></a>
-          </span>
-          <a ng-click="remove(axis, opt.ref)" ng-show="axis.remove" class="ng-link ng-icon">
-            <i class="fa fa-times"></i></a>
-        </div>
-        <strong>{{opt.label}}</strong>
-        {{opt.subLabel}}
+          <div class="pull-right">
+            <a ng-click="remove(axis, opt.ref)" ng-show="axis.remove" class="ng-link ng-icon">
+              <i class="fa fa-times"></i></a>
+          </div>
+          <strong ng-if="opt.subLabel == 'Einzelplanbezeichnung'">Organisation</strong>
+          <strong ng-if="opt.subLabel == 'Hauptgruppenbezeichnung'">Gruppe</strong>
+          <strong ng-if="opt.subLabel == 'Hauptfunktionbezeichnung'">Funktion</strong>
       </td>
     </tr>
   </table>
@@ -41,10 +35,9 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <strong>Filters</strong>
-
+    <strong>Einnahmen oder Ausgaben</strong>
     <div class="btn-group" dropdown ng-show="filterAttributes.length">
-      &mdash;
+      <!-- &mdash;
       <a dropdown-toggle class="ng-link">add filter</a>
       <ul class="dropdown-menu" role="menu">
         <li ng-repeat="attr in filterAttributes">
@@ -53,27 +46,27 @@
             {{attr.subLabel}}
           </a>
         </li>
-      </ul>
+      </ul> -->
     </div>
   </div>
   <table class="table table-panel">
     <tbody ng-repeat="filter in filters">
       <tr>
         <td colspan="2">
-          <strong>{{filter.attr.label}}</strong>
-          {{filter.attr.subLabel}}
+          <!-- <strong>{{filter.attr.label}}</strong>
+          {{filter.attr.subLabel}} -->
         </td>
         <td width="1%">
-          <span class="pull-right">
+          <!-- <span class="pull-right">
             <a ng-click="removeFilter(filter)" class="ng-link">
               <i class="fa fa-times"></i>
             </a>
-          </span>
+          </span> -->
         </td>
       </tr>
       <tr class="adjoined">
-        <td width="1%" class="middle">
-          is
+        <td width="0%" class="middle">
+          <!-- is -->
         </td>
         <td width="95%">
           <ui-select ng-model="filter.value" disable-search="false" on-select="setFilter(filter, $item, $model)">
