--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -1,5 +1,5 @@
 <babbage endpoint="{{endpoint}}" cube="{{cube}}" state="state" update="update(state)">
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-12">
       <div class="pull-right">
         <div class="btn-group spaced" role="group">
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="row">
     <div class="col-md-9">
       <div ng-if="view == 'crosstab'">
@@ -60,7 +60,7 @@
     </div>
     <div class="col-md-3">
       <babbage-panel></babbage-panel>
-
+      <!--
       <div class="embed-link">
         <p class="help-block">Embed this view into another website:</p>
         <div class="input-group">
@@ -71,7 +71,7 @@
             value="<style>.babbage-embed{position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;} .babbage-embed iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class='babbage-embed'><iframe src='{{embedLink}}' frameborder='0' allowfullscreen></iframe></div>">
         </div>
       </div>
-
+      -->
     </div>
   </div>
 </babbage>
